🎨 修复一些代码问题